--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "Yannik Messerli <ymesserli@esri.com>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "grunt": "^1.3.0",
+    "grunt": "^1.5.2",
     "grunt-contrib-concat": "*",
     "grunt-contrib-connect": "*",
     "grunt-contrib-copy": "*",
@@ -32,11 +32,13 @@
     "grunt-run": "^0.8.1",
     "grunt-stripcomments": "^0.7.2",
     "js-yaml": ">=3.13.1",
+    "sass": "^1.52.2",
+    "tslib": "^2.4.0",
     "tslint": "^4.2.0"
   },
   "dependencies": {
+    "@types/arcgis-js-api": "^4.20.0",
     "@types/dojo": "1.9.41",
-    "node-sass": "4.14.1",
     "typescript": "4.2.4"
   }
 }
